# mcp-ansible-server

./: README.md  pyproject.toml  requirements.txt  userinputadv.py
src/ansible_mcp/: __init__.py
