[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-ansible"
version = "0.1.0"
description = "Advanced Ansible Model Context Protocol (MCP) server with playbook and role tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "PyYAML>=6.0.1",
  "typing-extensions>=4.9.0",
  "ansible-core>=2.16.0",
]

[project.urls]
Homepage = "https://modelcontextprotocol.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_mcp"]


